[gd_scene load_steps=3 format=2]

[ext_resource path="res://fonts/ui_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/title_screen.gd" type="Script" id=2]

[node name="title_screen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_right = 7.0
margin_bottom = 3.0
color = Color( 0.968627, 0.470588, 0.470588, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
margin_left = 269.0
margin_top = 130.0
margin_right = 751.0
margin_bottom = 164.0
size_flags_stretch_ratio = 0.0
custom_fonts/normal_font = ExtResource( 1 )
text = "Pink Dino Truck"

[node name="start" type="Button" parent="CanvasLayer"]
margin_left = 378.0
margin_top = 381.0
margin_right = 675.0
margin_bottom = 422.0
custom_fonts/font = ExtResource( 1 )
text = "New Game"

[node name="quit" type="Button" parent="CanvasLayer"]
margin_left = 378.0
margin_top = 447.0
margin_right = 678.0
margin_bottom = 488.0
custom_fonts/font = ExtResource( 1 )
text = "Quit Game"

[node name="resume" type="Button" parent="CanvasLayer"]
visible = false
margin_left = 378.0
margin_top = 320.0
margin_right = 678.0
margin_bottom = 361.0
custom_fonts/font = ExtResource( 1 )
text = "Resume"

[connection signal="pressed" from="CanvasLayer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CanvasLayer/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="CanvasLayer/resume" to="." method="_on_resume_pressed"]
